更新swagger注解
